Fix Jenkinsfile: corrected when conditions